--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<iframe src="https://www.xbox.com/de-de/play" width="100%" height="500"></iframe>
+<iframe src="https://clipart-library.com/cool-pictures.html" width="100%" height="500"></iframe>
 
 </body>
 </html>
