--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<iframe src="www.bing.com" width="100%" height="500"></iframe>
+<iframe src="https://www.bing.com" width="100%" height="500"></iframe>
 
 </body>
 </html>
