--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<iframe src="https://emiss23.itch.io/zombie-survival" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+<iframe src="https://squidcor.itch.io/anger-foot" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
 
 </body>
 </html>
