--- a/index.html
+++ b/index.html
@@ -1,8 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gästebuch</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 50px;
+    }
+
+    #guestbook {
+      width: 80%;
+      margin: 0 auto;
+    }
+
+    #comments {
+      margin-top: 20px;
+      text-align: left;
+    }
+
+    #adBanner {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #f0f0f0;
+      padding: 10px;
+      border-top: 1px solid #ccc;
+    }
+
+    #adBanner img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
+</head>
 <body>
 
-<iframe src="https://squidcor.itch.io/anger-foot" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
+<h2>Gästebuch</h2>
+
+<form id="guestbookForm">
+  <label for="comment">Schreibe hier deinen Kommentar:</label><br>
+  <textarea id="comment" name="comment" rows="4" cols="50"></textarea><br>
+  <button type="button" onclick="saveComment()">Speichern</button>
+</form>
+
+<div id="comments">
+  <h3>Kommentare:</h3>
+  <ul id="commentList"></ul>
+</div>
+
+<!-- Platzhalter Ad Banner -->
+<div id="adBanner">
+  <img src="placeholder_ad_banner.png" alt="Ad Banner">
+</div>
+
+<script>
+  function saveComment() {
+    const commentText = document.getElementById('comment').value;
+    
+    if (commentText.trim() !== "") {
+      const commentList = JSON.parse(localStorage.getItem('comments')) || [];
+      commentList.push(commentText);
+      localStorage.setItem('comments', JSON.stringify(commentList));
+      displayComments();
+    }
+  }
+
+  function displayComments() {
+    const commentList = JSON.parse(localStorage.getItem('comments')) || [];
+    const commentListElement = document.getElementById('commentList');
+    commentListElement.innerHTML = '';
+
+    commentList.forEach(comment => {
+      const listItem = document.createElement('li');
+      listItem.textContent = comment;
+      commentListElement.appendChild(listItem);
+    });
+  }
+
+  displayComments(); // Lade vorhandene Kommentare beim Seitenaufruf
+</script>
+
+<!-- Google AdSense-Code-Snippet -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-1501465906089828",
+    enable_page_level_ads: true
+  });
+</script>
 
 </body>
 </html>
