--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
-<body bgcolour=black text=white>
+<body bgcolour = black text = white>
  <title>Jans Coding</title>
-<img src="https://i.imgur.com/GFNAg36.png" border="0"> <br>
+<center>
+ <img src="https://i.imgur.com/GFNAg36.png" border="0"> <br>
 <br>
 <img src="fold.png" border="0"> <br>
 <br>
+</center>
 <a href="tags.html">Tabelle</a><br>
 <a href="about.html">About</a> <br>
 <a href="comment.html">Comment</a> <br>
