--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<body bgcolour = black text = white>
  <title>Jans Coding</title>
+ <body bgcolour = black text = white></body>
 <center>
  <img src="https://i.imgur.com/GFNAg36.png" border="0"> <br>
 <br>
