--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
+    <style>
+        body (background-colour:#000000)
+    </style>
  <title>Jans Coding</title>
- <body bgcolour = black text = white></body>
+ <body>
 <center>
  <img src="https://i.imgur.com/GFNAg36.png" border="0"> <br>
 <br>
@@ -13,3 +16,4 @@
 <a href="watch.html">Stop Uhr</a>
 
 </body>
+
