--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
-    <style>
-        body (background-colour:#000000)
-    </style>
- <title>Jans Coding</title>
- <body>
+<link rel="stylesheet" href="mystyle.css">
+<title>Jans Coding</title>
+<body>
 <center>
  <img src="https://i.imgur.com/GFNAg36.png" border="0"> <br>
 <br>
