--- a/about.html
+++ b/about.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="mystyle.css">
+<body>
 <img src="https://i.imgur.com/FKLBZLf.png" border="0"> <br>
 
 <p>Hey, ich bin Jan, 16 Jahre alt und ein aufstrebender Schüler mit einer Leidenschaft für Weltraumforschung.</p>
@@ -15,3 +17,4 @@
 <p>Ich träume davon, eines Tages einen Beitrag zur Erforschung des Weltalls zu leisten und die Menschheit ins Unbekannte zu führen.</p>
 
 <p>Folge meiner Reise, während ich die Sterne greife und nach den Geheimnissen des Lebens und des Universums suche!</p>
+</body>
