--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+<html>
 <link rel="stylesheet" href="mystyle.css">
 <body>
 <img src="https://i.imgur.com/FKLBZLf.png" border="0"> <br>
@@ -19,3 +20,5 @@
 <p>Folge meiner Reise, während ich die Sterne greife und nach den Geheimnissen des Lebens und des Universums suche!</p>
   
 </body>
+  
+</html>
