--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <link rel="stylesheet" href="mystyle.css">
 <title>Jans Coding</title>
+<header>
+    Jans Coding
+</header>
 <body>
-<center>
- <img src="https://i.imgur.com/GFNAg36.png" border="0"> <br>
 <br>
 <img src="fold.png" border="0"> <br>
 <br>
