--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
+    <title>Jans Coding</title>
 <link rel="stylesheet" href="mystyle.css">
-<title>Jans Coding</title>
+<div class="container">
+    <div class="Top"></div>
+    <div class="Sidebar"></div>
+    <div class="Main"></div>
+    <div class="Bottom"></div>
+  </div>
+
 <header>
     Jans Coding
 </header>
