--- a/index.html
+++ b/index.html
@@ -2,24 +2,22 @@
     <title>Jans Coding</title>
 <link rel="stylesheet" href="mystyle.css">
 <div class="container">
-    <div class="Top"></div>
-    <div class="Sidebar"></div>
-    <div class="Main"></div>
+    <div class="Top">
+        <header>
+            Jans Coding
+        </header>
+    </div>
+    <div class="Sidebar">
+        <a href="tags.html">Tabelle</a><br>
+        <a href="about.html">About</a> <br>
+        <a href="comment.html">Comment</a> <br>
+        <a href="watch.html">Stop Uhr</a>
+    </div>
+    <div class="Main">
+        <img src="fold.png" border="0">
+    </div>
     <div class="Bottom"></div>
   </div>
 
-<header>
-    Jans Coding
-</header>
-<body>
-<br>
-<img src="fold.png" border="0"> <br>
-<br>
-</center>
-<a href="tags.html">Tabelle</a><br>
-<a href="about.html">About</a> <br>
-<a href="comment.html">Comment</a> <br>
-<a href="watch.html">Stop Uhr</a>
 
-</body>
 
