--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
-<html>
-    <title>Jans Coding</title>
-<link rel="stylesheet" href="mystyle.css">
-<div class="container">
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jans Coding</title>
+  <link rel="stylesheet" href="mystyle.css">
+</head>
+<body>
+  <div class="container">
     <div class="Top">
-        <header>
-            Jans Coding
-        </header>
+      <header>
+        Jans Coding
+      </header>
     </div>
     <div class="Sidebar">
-        <a href="tags.html">Tabelle</a><br>
-        <a href="about.html">About</a> <br>
-        <a href="comment.html">Comment</a> <br>
-        <a href="watch.html">Stop Uhr</a>
+      <a href="tags.html">Tabelle</a><br>
+      <a href="about.html">About</a> <br>
+      <a href="comment.html">Comment</a> <br>
+      <a href="watch.html">Stop Uhr</a>
     </div>
     <div class="Main">
-        <img src="fold.png" border="0">
+      <img src="fold.png" border="0">
     </div>
     <div class="Bottom"></div>
   </div>
-
-
-
+</body>
+</html>
