--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       </header>
     </div>
     <div class="Sidebar">
-      <a href="tags.html">Tabelle</a><br>
-      <a href="about.html">About</a> <br>
-      <a href="comment.html">Comment</a> <br>
+      <a href="tags.html">Tabelle</a><br><br>
+      <a href="about.html">About</a> <br><br>
+      <a href="comment.html">Comment</a> <br><br>
       <a href="watch.html">Stop Uhr</a>
     </div>
     <div class="Main">
