--- a/tags.html
+++ b/tags.html
@@ -1,4 +1,11 @@
-<h2>HTML-Tags und Erklärungen</h2>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+<h2>HTML-Tags</h2>
+
+<link rel="stylesheet" href="mystyle.css">
 
 <table border = 1>
   <tr>
