--- a/tags.html
+++ b/tags.html
@@ -6,7 +6,7 @@
 <h2>HTML-Tags</h2>
 
 <link rel="stylesheet" href="mystyle.css">
-
+<body
 <table border = 1>
   <tr>
     <th>HTML-Tag</th>
@@ -69,3 +69,4 @@
     <td>Ein mehrzeiliges Texteingabeelement.</td>
   </tr>
 </table>
+</body>
