--- a/tags.html
+++ b/tags.html
@@ -80,7 +80,7 @@
           <td>&lt;textarea&gt;</td>
           <td>Ein mehrzeiliges Texteingabeelement.</td>
         </tr>
-      </table>>
+      </table>
     </div>
     <div class="Bottom"></div>
   </div>
