--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jans Coding</title>
   <link rel="stylesheet" href="mystyle.css">
+  <script src="ripple.js"></script>
 </head>
 <body>
   <div class="container">
@@ -14,10 +15,10 @@
       </header>
     </div>
     <div class="Sidebar">
-      <a href="tags.html">Tabelle</a><br><br>
-      <a href="about.html">About</a> <br><br>
-      <a href="comment.html">Comment</a> <br><br>
-      <a href="watch.html">Stop Uhr</a>
+      <a href="tags.html"effect="ripple">Tabelle</a><br><br>
+      <a href="about.html"effect="ripple">About</a> <br><br>
+      <a href="comment.html"effect="ripple">Comment</a> <br><br>
+      <a href="watch.html"effect="ripple">Stop Uhr</a>
     </div>
     <div class="Main">
       <img src="fold.png" border="0">
