--- a/about.html
+++ b/about.html
@@ -2,8 +2,21 @@
 <link rel="stylesheet" href="mystyle.css">
 <body>
 <img src="https://i.imgur.com/FKLBZLf.png" border="0"> <br>
-
-<p>Hey, ich bin Jan, 16 Jahre alt und ein aufstrebender Schüler mit einer Leidenschaft für Weltraumforschung.</p>
+<body>
+    <div class="container">
+      <div class="Top">
+        <header>
+          Jans Coding
+        </header>
+      </div>
+      <div class="Sidebar">
+        <a href="tags.html"effect="ripple">Tabelle</a><br><br>
+        <a href="about.html"effect="ripple">About</a> <br><br>
+        <a href="comment.html"effect="ripple">Comment</a> <br><br>
+        <a href="watch.html"effect="ripple">Stop Uhr</a>
+      </div>
+      <div class="Main">
+        <p>Hey, ich bin Jan, 16 Jahre alt und ein aufstrebender Schüler mit einer Leidenschaft für Weltraumforschung.</p>
 
 <p>In meiner Freizeit erkunde ich die Geheimnisse des Universums und träume davon, eines Tages Astronaut zu werden.</p>
 
@@ -19,6 +32,10 @@
 
 <p>Folge meiner Reise, während ich die Sterne greife und nach den Geheimnissen des Lebens und des Universums suche!</p>
   
-</body>
-  
+      </div>
+      <div class="Bottom"></div>
+    </div>
+  </body>
+
+
 </html>
