--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 <html>
 <link rel="stylesheet" href="mystyle.css">
 <body>
-<img src="https://i.imgur.com/FKLBZLf.png" border="0"> <br>
+
 <body>
     <div class="container">
       <div class="Top">
         <header>
-          Jans Coding
+          Jans Coding ABOUT
         </header>
       </div>
       <div class="Sidebar">
