--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         </header>
       </div>
       <div class="Sidebar">
-        <a href="tags.html"effect="ripple">Tabelle</a><br><br>
+        <a href="tags.html"effect="ripple">Tags</a><br><br>
         <a href="about.html"effect="ripple">About</a> <br><br>
         <a href="comment.html"effect="ripple">Comment</a> <br><br>
         <a href="watch.html"effect="ripple">Stop Uhr</a>
