--- a/tags.html
+++ b/tags.html
@@ -9,14 +9,14 @@
   <div class="container">
     <div class="Top">
       <header>
-        Jans Coding         HTML-Tags
+        Jans Coding Tags
       </header>
     </div>
     <div class="Sidebar">
-      <a href="tags.html">Tabelle</a><br><br>
-      <a href="about.html">About</a> <br><br>
-      <a href="comment.html">Comment</a> <br><br>
-      <a href="watch.html">Stop Uhr</a>
+      <a href="tags.html"effect="ripple">Tags</a><br><br>
+      <a href="about.html"effect="ripple">About</a> <br><br>
+      <a href="comment.html"effect="ripple">Comment</a> <br><br>
+      <a href="watch.html"effect="ripple">Stop Uhr</a>
     </div>
     <div class="Main">
       <table border = 1>
