--- a/watch.html
+++ b/watch.html
@@ -16,7 +16,7 @@
       <a href="tags.html"effect="ripple">Tags</a><br><br>
       <a href="about.html"effect="ripple">About</a> <br><br>
       <a href="comment.html"effect="ripple">Comment</a> <br><br>
-      <a href="watch.html"effect="ripple">Stop Uhr</a>
+      <a href="woodcutter.html"effect="ripple">My Game</a>
     </div>
     <div class="Main">
       
