--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
       </div>
       <div class="Sidebar">
         <a href="tags.html"effect="ripple">Tags</a><br><br>
-        <a href="about.html"effect="ripple">About</a> <br><br>
+        <a href="index.html"effect="ripple">Main</a> <br><br>
         <a href="comment.html"effect="ripple">Comment</a> <br><br>
-        <a href="watch.html"effect="ripple">Stop Uhr</a>
+        <a href="woodcutter.html"effect="ripple">My Game</a>
       </div>
       <div class="Main">
         <p>Hey, ich bin Jan, 16 Jahre alt und ein aufstrebender Schüler mit einer Leidenschaft für Weltraumforschung.</p>
