--- a/woodcutter.html
+++ b/woodcutter.html
@@ -18,7 +18,7 @@
       <a href="tags.html"effect="ripple">Tags</a><br><br>
       <a href="about.html"effect="ripple">About</a> <br><br>
       <a href="comment.html"effect="ripple">Comment</a> <br><br>
-      <a href="watch.html"effect="ripple">Stop Uhr</a>
+      <a href="index.html"effect="ripple">Main</a>
     </div>
     <div class="Main">
         <iframe src="https://scratch.mit.edu/projects/888819737/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
