--- a/comment.html
+++ b/comment.html
@@ -3,7 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gästebuch</title>
+  <title>Jans Coding</title>
+  <link rel="stylesheet" href="mystyle.css">
+  <script src="ripple.js"></script>
+</head>
+<body>
+  <div class="container">
+    <div class="Top">
+      <header>
+        Jans Coding
+      </header>
+    </div>
+    <div class="Sidebar">
+      <a href="tags.html"effect="ripple">Tags</a><br><br>
+      <a href="about.html"effect="ripple">About</a> <br><br>
+      <a href="index.html"effect="ripple">Main</a> <br><br>
+      <a href="woodcutter.html"effect="ripple">My Game</a>
+    </div>
+    <div class="Main">
+      
+  <title>Comments</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -21,25 +40,12 @@
       text-align: left;
     }
 
-    #adBanner {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background-color: #f0f0f0;
-      padding: 10px;
-      border-top: 1px solid #ccc;
-    }
-
-    #adBanner img {
-      max-width: 100%;
-      height: auto;
     }
   </style>
 </head>
 <body>
 
-<h2>Gästebuch</h2>
+<h2>Comments</h2>
 
 <form id="guestbookForm">
   <label for="comment">Schreibe hier deinen Kommentar:</label><br>
@@ -50,11 +56,6 @@
 <div id="comments">
   <h3>Kommentare:</h3>
   <ul id="commentList"></ul>
-</div>
-
-<!-- Platzhalter Ad Banner -->
-<div id="adBanner">
-  <img src="placeholder_ad_banner.png" alt="Ad Banner">
 </div>
 
 <script>
@@ -81,17 +82,14 @@
     });
   }
 
-  displayComments(); // Lade vorhandene Kommentare beim Seitenaufruf
+  displayComments(); 
 </script>
 
-<!-- Google AdSense-Code-Snippet -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-1501465906089828",
-    enable_page_level_ads: true
-  });
 </script>
 
+</body>
+    </div>
+    <div class="Bottom"></div>
+  </div>
 </body>
 </html>
