--- a/index.html
+++ b/index.html
@@ -5,7 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jans Coding</title>
   <link rel="stylesheet" href="mystyle.css">
-  <script src="ripple.js"></script>
+  <style>
+    .outlined {
+    --ripple-background: black;
+
+    border: 2px solid black;
+    background-color: white;
+    color: red;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    }
+    a { 
+    --ripple-background: black;
+    --ripple-opacity: 0.1;
+    --ripple-duration: 900ms;
+
+    width: 106px;
+    height: 36px;
+    background: red;
+    text-align: center;
+    display: inline-block;
+    padding-top: 14px;
+}
+</style>
+
 </head>
 <body>
   <div class="container">
@@ -26,4 +50,6 @@
     <div class="Bottom"></div>
   </div>
 </body>
+
+<script src="ripple.js"></script>
 </html>
