--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   
 </head>
 <body>
+  <canvas id="canvas" style="background: #111;"></canvas>
   <div class="container">
     <div class="Top">
       <header>
@@ -28,4 +29,5 @@
 </body>
 
 <script src="ripple.js"></script>
+<script src="rain.js"></script>
 </html>
