--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
 </head>
 <body>
-  <canvas id="canvas" style="background: #111;"></canvas>
+  <canvas id="c"></canvas>
   <div class="container">
     <div class="Top">
       <header>
