--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <a href="woodcutter.html"effect="ripple">My Game</a>
     </div>
     <div class="Main">
-      <img src="fold.png" border="0">
+      <script type="module" src="https://unpkg.com/@splinetool/viewer@1.0.50/build/spline-viewer.js"></script>
+<spline-viewer loading-anim-type="spinner-small-dark" url="undefined"></spline-viewer>
     </div>
     <div class="Bottom"></div>
   </div>
