--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jans Coding</title>
-  <link rel="stylesheet" href="mystyle.css">
-  
-</head>
-<body>
+<link rel="stylesheet" href="mystyle.css">
+
+<canvas id='canv'></canvas>
+<div class='container'>
+  <body>
   <div class="container">
     <div class="Top">
       <header>
@@ -15,18 +10,15 @@
       </header>
     </div>
     <div class="Sidebar">
-      <a href="tags.html"effect="ripple">Tags</a><br><br>
-      <a href="about.html"effect="ripple">About</a> <br><br>
-      <a href="comment.html"effect="ripple">Comment</a> <br><br>
-      <a href="woodcutter.html"effect="ripple">My Game</a>
+      <a href="tags.html" effect="ripple">Tags</a><br><br>
+      <a href="about.html" effect="ripple">About</a> <br><br>
+      <a href="comment.html" effect="ripple">Comment</a> <br><br>
+      <a href="woodcutter.html" effect="ripple">My Game</a>
     </div>
     <div class="Main">
-      <script type="module" src="https://unpkg.com/@splinetool/viewer@1.0.50/build/spline-viewer.js"></script>
-<spline-viewer loading-anim-type="spinner-small-dark" url="undefined"></spline-viewer>
-    </div>
     <div class="Bottom"></div>
   </div>
 </body>
+</div>
 
-
-</html>
+<script src="rain.js"></script>
