--- a/woodcutter.html
+++ b/woodcutter.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jans Coding</title>
   <link rel="stylesheet" href="mystyle.css">
-  <script src="ripple.js"></script>
+
 </head>
 <body>
+  <canvas id='canv'></canvas> <!-- Hier fügen wir das Canvas-Element für den Regeneffekt ein -->
   <div class="container">
     <div class="Top">
       <header>
@@ -15,10 +16,10 @@
       </header>
     </div>
     <div class="Sidebar">
-      <a href="tags.html"effect="ripple">Tags</a><br><br>
-      <a href="about.html"effect="ripple">About</a> <br><br>
-      <a href="comment.html"effect="ripple">Comment</a> <br><br>
-      <a href="index.html"effect="ripple">Main</a>
+      <a href="tags.html" effect="ripple">Tags</a><br><br>
+      <a href="about.html" effect="ripple">About</a> <br><br>
+      <a href="comment.html" effect="ripple">Comment</a> <br><br>
+      <a href="index.html" effect="ripple">Main</a>
     </div>
     <div class="Main">
         <iframe src="https://scratch.mit.edu/projects/888819737/embed" allowtransparency="true" width="600" height="500" frameborder="0" scrolling="no" allowfullscreen></iframe>
@@ -27,3 +28,4 @@
   </div>
 </body>
 </html>
+<script src="rain.js"></script>
