--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="rain.css">
+
 
 <canvas id='canv'></canvas>
 <div class='container'>
