--- a/comment.html
+++ b/comment.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jans Coding</title>
-  <link rel="stylesheet" href="mystyle.css">
-  <script src="ripple.js"></script>
-</head>
-<body>
+<link rel="stylesheet" href="rain.css">
+
+
+<canvas id='canv'></canvas>
+<div class='container'>
+  <body>
   <div class="container">
     <div class="Top">
       <header>
@@ -15,19 +11,13 @@
       </header>
     </div>
     <div class="Sidebar">
-      <a href="tags.html"effect="ripple">Tags</a><br><br>
-      <a href="about.html"effect="ripple">About</a> <br><br>
-      <a href="index.html"effect="ripple">Main</a> <br><br>
-      <a href="woodcutter.html"effect="ripple">My Game</a>
+      <a href="tags.html" effect="ripple">Tags</a><br><br>
+      <a href="about.html" effect="ripple">About</a> <br><br>
+      <a href="comment.html" effect="ripple">Comment</a> <br><br>
+      <a href="woodcutter.html" effect="ripple">My Game</a>
     </div>
     <div class="Main">
-      
-  <title>Comments</title>
-  
-</head>
-<body>
-
-<h2>Comments</h2>
+      <h2>Comments</h2>
 
 <form id="guestbookForm">
   <label for="comment">Schreibe hier deinen Kommentar:</label><br>
@@ -69,9 +59,9 @@
 
 </script>
 
-</body>
-    </div>
     <div class="Bottom"></div>
   </div>
 </body>
-</html>
+</div>
+
+<script src="rain.js"></script>
