--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
       <a href="comment.html" effect="ripple">Comment</a> <br><br>
       <a href="woodcutter.html" effect="ripple">My Game</a>
     </div>
-    <div class="Main">
+    <div class="Main"></div>
     <div class="Bottom"></div>
-  </div>
 </body>
 </div>
 
