--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <canvas id='canv'></canvas>
 <div class='container'>
+  <title>Jans Coding</title>
   <body>
   <div class="container">
     <div class="Top">
