--- a/about.html
+++ b/about.html
@@ -1,41 +1,30 @@
-<html>
-<link rel="stylesheet" href="mystyle.css">
-<body>
+<link rel="stylesheet" href="rain.css">
 
-<body>
-    <div class="container">
-      <div class="Top">
-        <header>
-          Jans Coding ABOUT
-        </header>
-      </div>
-      <div class="Sidebar">
-        <a href="tags.html"effect="ripple">Tags</a><br><br>
-        <a href="index.html"effect="ripple">Main</a> <br><br>
-        <a href="comment.html"effect="ripple">Comment</a> <br><br>
-        <a href="woodcutter.html"effect="ripple">My Game</a>
-      </div>
-      <div class="Main">
-        <p>Hey, ich bin Jan, 16 Jahre alt und ein aufstrebender Schüler mit einer Leidenschaft für Weltraumforschung.</p>
 
-<p>In meiner Freizeit erkunde ich die Geheimnisse des Universums und träume davon, eines Tages Astronaut zu werden.</p>
-
-<p>Wenn ich nicht gerade die Sterne studiere, tauche ich in die Welt der Bücher ein, besonders Science-Fiction und Fantasy.</p>
-
-<p>Mathe und Physik sind meine Lieblingsfächer, weil sie mir helfen, die Gesetze des Universums besser zu verstehen.</p>
-
-<p>Abenteuerlustig und sportlich, finde mich oft beim Wandern oder Radfahren in der Natur, auf der Suche nach neuen Herausforderungen.</p>
-
-<p>Aber keine Sorge, ich habe auch eine gemütliche Seite - Videospiele und Pizzaabende gehören zu meinen entspannenden Momenten.</p>
-
-<p>Ich träume davon, eines Tages einen Beitrag zur Erforschung des Weltalls zu leisten und die Menschheit ins Unbekannte zu führen.</p>
-
-<p>Folge meiner Reise, während ich die Sterne greife und nach den Geheimnissen des Lebens und des Universums suche!</p>
-  
-      </div>
-      <div class="Bottom"></div>
+<canvas id='canv'></canvas>
+<div class='container'>
+  <title>Jans Coding</title>
+  <body>
+  <div class="container">
+    <div class="Top">
+      <header>
+        Jans Coding
+      </header>
     </div>
-  </body>
+    <div class="Sidebar">
+      <a href="tags.html" effect="ripple">Tags</a><br><br>
+      <a href="about.html" effect="ripple">About</a> <br><br>
+      <a href="comment.html" effect="ripple">Comment</a> <br><br>
+      <a href="woodcutter.html" effect="ripple">My Game</a>
+    </div>
+    <div class="Main"></div>
+    <p>Hi ich bin Jan, 16 Jahre alt und habe diese</p> 
+    <p> Seite erstellt weil ich einfach mal bischen was mit HTML ausprobieren</p>
+    <p>wollte. Viel Spaß auf der Seite du kommst <a href="https://scratch.mit.edu/projects/888819737">hier</a> zur Vollversion meines Spieles</p>
+     <p>kannst es aber auch hier ausprobieren. Ich hoffe du kannst dich inspieriren</p>
+     <div class="Bottom"></div>
+</body>
+</div>
 
+<script src="rain.js"></script>
 
-</html>
