--- a/about.html
+++ b/about.html
@@ -17,11 +17,11 @@
       <a href="comment.html" effect="ripple">Comment</a> <br><br>
       <a href="woodcutter.html" effect="ripple">My Game</a>
     </div>
-    <div class="Main"></div>
+    <div class="Main">
     <p>Hi ich bin Jan, 16 Jahre alt und habe diese</p> 
     <p> Seite erstellt weil ich einfach mal bischen was mit HTML ausprobieren</p>
     <p>wollte. Viel Spaß auf der Seite du kommst <a href="https://scratch.mit.edu/projects/888819737">hier</a> zur Vollversion meines Spieles</p>
-     <p>kannst es aber auch hier ausprobieren. Ich hoffe du kannst dich inspieriren</p>
+     <p>kannst es aber auch hier ausprobieren. Ich hoffe du kannst dich inspieriren</p></div>
      <div class="Bottom"></div>
 </body>
 </div>
