--- a/about.html
+++ b/about.html
@@ -1,11 +1,14 @@
-<link rel="stylesheet" href="rain.css">
-
-
-<canvas id='canv'></canvas>
-<div class='container'>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jans Coding</title>
-  <body>
-  <div class="container">
+  <link rel="stylesheet" href="rain.css">
+</head>
+<body>
+  <canvas id='canv'></canvas>
+  <div class='container'>
     <div class="Top">
       <header>
         Jans Coding
@@ -18,12 +21,10 @@
       <a href="woodcutter.html" effect="ripple">My Game</a>
     </div>
     <div class="Main">
-    <p>Hi ich bin Jan, 16 Jahre alt und habe diese Seite erstellt weil ich einfach mal bischen was mit HTML ausprobieren</p>
-    <p>wollte. Viel Spaß auf der Seite du kommst <a href="https://scratch.mit.edu/projects/888819737">hier</a> zur Vollversion meines Spieles</p>
-     <p>kannst es aber auch hier ausprobieren. Ich hoffe du kannst dich inspieriren</p></div>
-     <div class="Bottom"></div>
+      <p>Hi ich bin Jan, 16 Jahre alt und habe diese Seite erstellt, weil ich einfach mal etwas mit HTML ausprobieren wollte. Viel Spaß auf der Seite! Du kannst <a href="https://scratch.mit.edu/projects/888819737">hier</a> zur Vollversion meines Spiels gelangen, aber du kannst es auch hier ausprobieren. Ich hoffe, du kannst dich inspirieren lassen.</p>
+    </div>
+    <div class="Bottom"></div>
+  </div>
 </body>
-</div>
-
 <script src="rain.js"></script>
-
+</html>
