--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     </div>
     <div class="Sidebar">
       <a href="tags.html" effect="ripple">Tags</a><br><br>
-      <a href="about.html" effect="ripple">About</a> <br><br>
+      <a href="index.html" effect="ripple">Main</a> <br><br>
       <a href="comment.html" effect="ripple">Comment</a> <br><br>
       <a href="woodcutter.html" effect="ripple">My Game</a>
     </div>
