--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       <a href="woodcutter.html" effect="ripple">My Game</a>
     </div>
     <div class="Main">
-      <p>Hi ich bin Jan, 16 Jahre alt und habe diese Seite erstellt, weil ich einfach mal etwas mit HTML ausprobieren wollte. Viel Spaß auf der Seite! Du kannst <a href="https://scratch.mit.edu/projects/888819737">hier</a> zur Vollversion meines Spiels gelangen, aber du kannst es auch hier ausprobieren. Ich hoffe, du kannst dich inspirieren lassen.</p>
+      <p>Hi ich bin Jan, 16 Jahre alt und habe diese Seite erstellt, weil ich einfach mal etwas mit HTML ausprobieren wollte.</p> <p> Viel Spaß auf der Seite! Du kannst <a href="https://scratch.mit.edu/projects/888819737">hier</a> zur Vollversion meines Spiels gelangen, aber du kannst es auch hier ausprobieren. Ich hoffe, du kannst dich inspirieren lassen.</p>
     </div>
     <div class="Bottom"></div>
   </div>
