--- a/tags.html
+++ b/tags.html
@@ -1,3 +1,90 @@
+<link rel="stylesheet" href="rain.css">
+
+
+<canvas id='canv'></canvas>
+<div class='container'>
+  <title>Jans Coding</title>
+  <body>
+  <div class="container">
+    <div class="Top">
+      <header>
+        Jans Coding
+      </header>
+    </div>
+    <div class="Sidebar">
+      <a href="tags.html" effect="ripple">Tags</a><br><br>
+      <a href="about.html" effect="ripple">About</a> <br><br>
+      <a href="comment.html" effect="ripple">Comment</a> <br><br>
+      <a href="woodcutter.html" effect="ripple">My Game</a>
+    </div>
+    <div class="Main"><table border = 1>
+      <tr>
+        <th>HTML-Tag</th>
+        <th>Erklärung</th>
+      </tr>
+      <tr>
+        <td>&lt;html&gt;</td>
+        <td>Der Grund-Tag, der das gesamte HTML-Dokument enthält.</td>
+      </tr>
+      <tr>
+        <td>&lt;title&gt;</td>
+        <td>Definiert den Titel des HTML-Dokuments.</td>
+      </tr>
+      <tr>
+        <td>&lt;h1&gt; bis &lt;h6&gt;</td>
+        <td>Überschriften mit unterschiedlichen Hierarchiestufen.</td>
+      </tr>
+      <tr>
+        <td>&lt;p&gt;</td>
+        <td>Definiert einen Absatz.</td>
+      </tr>
+      <tr>
+        <td>&lt;a&gt;</td>
+        <td>Erzeugt einen Hyperlink.</td>
+      </tr>
+      <tr>
+        <td>&lt;img&gt;</td>
+        <td>Eingebettetes Bild.</td>
+      </tr>
+      <tr>
+        <td> &lt;li&gt;</td>
+        <td>Liste und Listenelement.</td>
+      </tr>
+      <tr>
+        <td>&lt;strong&gt;</td>
+        <td>Fettgedruckter Text.</td>
+      </tr>
+      <tr>
+        <td>&lt;em&gt;</td>
+        <td>Kursiver Text.</td>
+      </tr>
+      <tr>
+        <td>&lt;br&gt;</td>
+        <td>Zeilenumbruch.</td>
+      </tr>
+      <tr>
+        <td>&lt;hr&gt;</td>
+        <td>Horizontale Linie.</td>
+      </tr>
+      <tr>
+        <td>&lt;div&gt;</td>
+        <td>Gruppierungselement für HTML-Elemente.</td>
+      </tr>
+      <tr>
+        <td>&lt;input&gt;</td>
+        <td>Ein Eingabeelement.</td>
+      </tr>
+      <tr>
+        <td>&lt;textarea&gt;</td>
+        <td>Ein mehrzeiliges Texteingabeelement.</td>
+      </tr>
+    </table> </div>
+    <div class="Bottom"></div>
+</body>
+</div>
+
+<script src="rain.js"></script>
+
 <html lang="de">
 <head>
   <meta charset="UTF-8">
