--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="woodcutter.html" effect="ripple">My Game</a>
     </div>
     <div class="Main"></div>
+    <img src= fold.png>
     <div class="Bottom"></div>
 </body>
 </div>
