--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <a href="comment.html" effect="ripple">Comment</a> <br><br>
       <a href="woodcutter.html" effect="ripple">My Game</a>
     </div>
-    <div class="Main"></div>
-    <img src= fold.png>
+    <div class="Main">
+    <img src= fold.png> </div>
     <div class="Bottom"></div>
 </body>
 </div>
