--- a/tags.html
+++ b/tags.html
@@ -1,5 +1,9 @@
 <link rel="stylesheet" href="rain.css">
 
+<style>
+  body{
+  overflow: show;}
+</style>
 
 <canvas id='canv'></canvas>
 <div class='container'>
