--- a/tags.html
+++ b/tags.html
@@ -1,9 +1,12 @@
 <link rel="stylesheet" href="rain.css">
 
 <style>
-  body{
-  overflow: show;}
+  /* Scrollen aktivieren */
+  body {
+    overflow: scroll; /* oder overflow: scroll; */
+  }
 </style>
+
 
 <canvas id='canv'></canvas>
 <div class='container'>
