--- a/tags.html
+++ b/tags.html
@@ -1,11 +1,5 @@
-<link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="rain.css">
 
-<style>
-  /* Scrollen aktivieren */
-  body {
-    overflow: scroll; /* oder overflow: scroll; */
-  }
-</style>
 
 
 <canvas id='canv'></canvas>
@@ -19,7 +13,7 @@
       </header>
     </div>
     <div class="Sidebar">
-      <a href="index.html" effect="ripple">Main</a><br><br>
+      <a href="tags.html" effect="ripple">Tags</a><br><br>
       <a href="about.html" effect="ripple">About</a> <br><br>
       <a href="comment.html" effect="ripple">Comment</a> <br><br>
       <a href="woodcutter.html" effect="ripple">My Game</a>
