--- a/woodcutter.html
+++ b/woodcutter.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="Top">
       <header>
-        Jans Coding My Game
+        Jans Coding
       </header>
     </div>
     <div class="Sidebar">
