--- a/woodcutter.html
+++ b/woodcutter.html
@@ -1,20 +1,17 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>Jans Coding</title>
-  <link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="rain.css">
 
-</head>
-<body>
-  <canvas id='canv'></canvas> <!-- Hier fügen wir das Canvas-Element für den Regeneffekt ein -->
-  <div class="container">
-    <div class="Top">
-      <header>
-        Jans Coding
-      </header>
-    </div>
-    <div class="Sidebar">
+
+  <canvas id='canv'></canvas>
+  <div class='container'>
+    <title>Jans Coding</title>
+    <body>
+    <div class="container">
+      <div class="Top">
+        <header>
+          Jans Coding
+        </header>
+      </div>
+      <div class="Sidebar">
       <a href="tags.html" effect="ripple">Tags</a><br><br>
       <a href="about.html" effect="ripple">About</a> <br><br>
       <a href="comment.html" effect="ripple">Comment</a> <br><br>
