--- a/about.html
+++ b/about.html
@@ -1,18 +1,16 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <title>Jans Coding</title>
-  <link rel="stylesheet" href="rain.css">
-</head>
-<body>
+ <link rel="stylesheet" href="rain.css">
+ 
   <canvas id='canv'></canvas>
   <div class='container'>
-    <div class="Top">
-      <header>
-        Jans Coding
-      </header>
-    </div>
-    <div class="Sidebar">
+    <title>Jans Coding</title>
+    <body>
+    <div class="container">
+      <div class="Top">
+        <header>
+          Jans Coding
+        </header>
+      </div>
+      <div class="Sidebar">
       <a href="tags.html" effect="ripple">Tags</a><br><br>
       <a href="index.html" effect="ripple">Main</a> <br><br>
       <a href="comment.html" effect="ripple">Comment</a> <br><br>
