--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
- <link rel="stylesheet" href="rain.css">
+ <link rel="stylesheet" href="mystyle.css">
  
   <canvas id='canv'></canvas>
   <div class='container'>
