--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
- <link rel="stylesheet" href="mystyle.css">
- 
-  <canvas id='canv'></canvas>
-  <div class='container'>
-    <title>Jans Coding</title>
-    <body>
+<link rel="stylesheet" href="mystyle.css">
+
+<canvas id='canv'></canvas>
+<div class='container'>
+  <title>Jans Coding</title>
+  <body>
     <div class="container">
       <div class="Top">
         <header>
@@ -11,16 +11,16 @@
         </header>
       </div>
       <div class="Sidebar">
-      <a href="tags.html" effect="ripple">Tags</a><br><br>
-      <a href="index.html" effect="ripple">Main</a> <br><br>
-      <a href="comment.html" effect="ripple">Comment</a> <br><br>
-      <a href="woodcutter.html" effect="ripple">My Game</a>
+        <a href="tags.html" effect="ripple">Tags</a><br><br>
+        <a href="index.html" effect="ripple">Main</a> <br><br>
+        <a href="comment.html" effect="ripple">Comment</a> <br><br>
+        <a href="woodcutter.html" effect="ripple">My Game</a>
+      </div>
+      <div class="Main">
+        <p>Hi ich bin Jan, 16 Jahre alt und habe diese Seite erstellt, weil ich einfach mal etwas mit HTML ausprobieren wollte. Viel Spaß auf der Seite! Du kannst ↓ zur Vollversion meines Spiels gelangen, aber du kannst es auch hier ausprobieren.<a href="https://scratch.mit.edu/projects/888819737">hier</a>  Ich hoffe, du kannst dich inspirieren lassen.</p>
+      </div>
+      <div class="Bottom"></div>
     </div>
-    <div class="Main">
-      <p>Hi ich bin Jan, 16 Jahre alt und habe diese Seite erstellt, weil ich einfach mal etwas mit HTML ausprobieren wollte.</p> <p> Viel Spaß auf der Seite! Du kannst ↓ zur Vollversion meines Spiels gelangen, aber du kannst es auch hier ausprobieren.<a href="https://scratch.mit.edu/projects/888819737">hier</a>  Ich hoffe, du kannst dich inspirieren lassen.</p>
-    </div>
-    <div class="Bottom"></div>
-  </div>
-</body>
+  </body>
+</div>
 <script src="rain.js"></script>
-</html>
