--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="woodcutter.html" effect="ripple">My Game</a>
     </div>
     <div class="Main">
-    <img src= fold.png> </div>
+    <img src= phone.png> </div>
     <div class="Bottom"></div>
 </body>
 </div>
