--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<link rel="stylesheet" href="rain.css">
-
-
-<canvas id='canv'></canvas>
-<div class='container'>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jans Coding</title>
-  <body>
+  <link rel="stylesheet" href="rain.css">
+</head>
+<body>
+  <canvas id='canv'></canvas>
   <div class="container">
     <div class="Top">
       <header>
@@ -14,13 +17,15 @@
     <div class="Sidebar">
       <a href="tags.html" effect="ripple">Tags</a><br><br>
       <a href="about.html" effect="ripple">About</a> <br><br>
-      <a href="comment.html" effect="ripple">Comment</a> <br><br>
-      <a href="woodcutter.html" effect="ripple">My Game</a>
+      <a href="watch.html" effect="ripple">Watch</a> <br><br>
+      <a href="woodcutter.html" effect="ripple">My Game</a> <br><br>
+      <a href="aitools.html" effect="ripple">AI Tools</a>
     </div>
     <div class="Main">
-    <img src= phone.png> </div>
+      <img src="phone.png" alt="Phone Image">
+    </div>
     <div class="Bottom"></div>
+  </div>
+  <script src="rain.js"></script>
 </body>
-</div>
-
-<script src="rain.js"></script>
+</html>
