--- a/tags.html
+++ b/tags.html
@@ -1,12 +1,14 @@
-<link rel="stylesheet" href="rain.css">
-
-
-
-<canvas id='canv'></canvas>
-<div class='container'>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jans Coding</title>
-  <body>
-  <div class="container">
+  <link rel="stylesheet" href="rain.css">
+</head>
+<body>
+  <canvas id='canv'></canvas>
+  <div class='container'>
     <div class="Top">
       <header>
         Jans Coding
@@ -15,73 +17,76 @@
     <div class="Sidebar">
       <a href="index.html" effect="ripple">Main</a><br><br>
       <a href="about.html" effect="ripple">About</a> <br><br>
-      <a href="comment.html" effect="ripple">Comment</a> <br><br>
-      <a href="woodcutter.html" effect="ripple">My Game</a>
+      <a href="watch.html" effect="ripple">Watch</a> <br><br>
+      <a href="woodcutter.html" effect="ripple">My Game</a><br><br>
+      <a href="aitools.html" effect="ripple">AI Tools</a>
     </div>
-    <div class="Main"><table border = 1>
-      <tr>
-        <th>HTML-Tag</th>
-        <th>Erklärung</th>
-      </tr>
-      <tr>
-        <td>&lt;html&gt;</td>
-        <td>Der Grund-Tag, der das gesamte HTML-Dokument enthält.</td>
-      </tr>
-      <tr>
-        <td>&lt;title&gt;</td>
-        <td>Definiert den Titel des HTML-Dokuments.</td>
-      </tr>
-      <tr>
-        <td>&lt;h1&gt; bis &lt;h6&gt;</td>
-        <td>Überschriften mit unterschiedlichen Hierarchiestufen.</td>
-      </tr>
-      <tr>
-        <td>&lt;p&gt;</td>
-        <td>Definiert einen Absatz.</td>
-      </tr>
-      <tr>
-        <td>&lt;a&gt;</td>
-        <td>Erzeugt einen Hyperlink.</td>
-      </tr>
-      <tr>
-        <td>&lt;img&gt;</td>
-        <td>Eingebettetes Bild.</td>
-      </tr>
-      <tr>
-        <td> &lt;li&gt;</td>
-        <td>Liste und Listenelement.</td>
-      </tr>
-      <tr>
-        <td>&lt;strong&gt;</td>
-        <td>Fettgedruckter Text.</td>
-      </tr>
-      <tr>
-        <td>&lt;em&gt;</td>
-        <td>Kursiver Text.</td>
-      </tr>
-      <tr>
-        <td>&lt;br&gt;</td>
-        <td>Zeilenumbruch.</td>
-      </tr>
-      <tr>
-        <td>&lt;hr&gt;</td>
-        <td>Horizontale Linie.</td>
-      </tr>
-      <tr>
-        <td>&lt;div&gt;</td>
-        <td>Gruppierungselement für HTML-Elemente.</td>
-      </tr>
-      <tr>
-        <td>&lt;input&gt;</td>
-        <td>Ein Eingabeelement.</td>
-      </tr>
-      <tr>
-        <td>&lt;textarea&gt;</td>
-        <td>Ein mehrzeiliges Texteingabeelement.</td>
-      </tr>
-    </table> </div>
+    <div class="Main">
+      <table border="1">
+        <tr>
+          <th>HTML-Tag</th>
+          <th>Erklärung</th>
+        </tr>
+        <tr>
+          <td>&lt;html&gt;</td>
+          <td>Der Grund-Tag, der das gesamte HTML-Dokument enthält.</td>
+        </tr>
+        <tr>
+          <td>&lt;title&gt;</td>
+          <td>Definiert den Titel des HTML-Dokuments.</td>
+        </tr>
+        <tr>
+          <td>&lt;h1&gt; bis &lt;h6&gt;</td>
+          <td>Überschriften mit unterschiedlichen Hierarchiestufen.</td>
+        </tr>
+        <tr>
+          <td>&lt;p&gt;</td>
+          <td>Definiert einen Absatz.</td>
+        </tr>
+        <tr>
+          <td>&lt;a&gt;</td>
+          <td>Erzeugt einen Hyperlink.</td>
+        </tr>
+        <tr>
+          <td>&lt;img&gt;</td>
+          <td>Eingebettetes Bild.</td>
+        </tr>
+        <tr>
+          <td>&lt;li&gt;</td>
+          <td>Liste und Listenelement.</td>
+        </tr>
+        <tr>
+          <td>&lt;strong&gt;</td>
+          <td>Fettgedruckter Text.</td>
+        </tr>
+        <tr>
+          <td>&lt;em&gt;</td>
+          <td>Kursiver Text.</td>
+        </tr>
+        <tr>
+          <td>&lt;br&gt;</td>
+          <td>Zeilenumbruch.</td>
+        </tr>
+        <tr>
+          <td>&lt;hr&gt;</td>
+          <td>Horizontale Linie.</td>
+        </tr>
+        <tr>
+          <td>&lt;div&gt;</td>
+          <td>Gruppierungselement für HTML-Elemente.</td>
+        </tr>
+        <tr>
+          <td>&lt;input&gt;</td>
+          <td>Ein Eingabeelement.</td>
+        </tr>
+        <tr>
+          <td>&lt;textarea&gt;</td>
+          <td>Ein mehrzeiliges Texteingabeelement.</td>
+        </tr>
+      </table>
+    </div>
     <div class="Bottom"></div>
+  </div>
+  <script src="rain.js"></script>
 </body>
-</div>
-
-<script src="rain.js"></script>
+</html>
