--- a/woodcutter.html
+++ b/woodcutter.html
@@ -5,7 +5,6 @@
   <div class='container'>
     <title>Jans Coding</title>
     <body>
-    <div class="container">
       <div class="Top">
         <header>
           Jans Coding
@@ -14,11 +13,12 @@
       <div class="Sidebar">
       <a href="tags.html" effect="ripple">Tags</a><br><br>
       <a href="about.html" effect="ripple">About</a> <br><br>
-      <a href="comment.html" effect="ripple">Comment</a> <br><br>
-      <a href="index.html" effect="ripple">Main</a>
+      <a href="watch.html" effect="ripple">Watch</a> <br><br>
+      <a href="index.html" effect="ripple">Main</a> <br><br>
+      <a href="aitools.html" effect="ripple">AI Tools</a>
     </div>
     <div class="Main">
-        <iframe src="https://scratch.mit.edu/projects/888819737/embed" allowtransparency="true" width="600" height="400" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <iframe src="https://scratch.mit.edu/projects/888819737/embed" allowtransparency="true" width="700" height="400" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
     <div class="Bottom"></div>
   </div>
