--- a/countdown.html
+++ b/countdown.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jans Coding</title>
+  <title>Stopp Uhr</title>
   <link rel="stylesheet" href="rain.css">
 </head>
 <body>
@@ -22,13 +22,11 @@
       <a href="aitools.html" effect="ripple">AI Tools</a>
     </div>
     <div class="Main">
-      <video autoplay muted width="1000">
-        <source src="galaxy-s24.webm" type="video/webm" />
-    </video>
-    
-    </div>
-    <div class="Bottom"></div>
-  </div>
+      <p style="font-family: 'emizen', sans-serif; font-size: 50px; text-align: center;">Osterferien</p>
+
+      <p id="demo" width="400" height="100"></p>
+      
   <script src="rain.js"></script>
+  <script src="countdown.js"></script>
 </body>
 </html>
