--- a/watch.html
+++ b/watch.html
@@ -17,16 +17,16 @@
     <div class="Sidebar">
       <a href="tags.html" effect="ripple">Tags</a><br><br>
       <a href="about.html" effect="ripple">About</a> <br><br>
-      <a href="comment.html" effect="ripple">Comment</a> <br><br>
+      <a href="countdown.html" effect="ripple">Countdown</a> <br><br>
       <a href="woodcutter.html" effect="ripple">My Game</a> <br><br>
       <a href="aitools.html" effect="ripple">AI Tools</a>
     </div>
     <div class="Main">
-      <h2>Countdown Timer</h2>
+      <p style="font-family: 'emizen', sans-serif; font-size: 50px; text-align: center;">Stopuhr</p>
       <div id="timer">00:00:000</div>
-      <button onclick="startTimer()">Start</button>
-      <button onclick="stopTimer()">Stop</button>
-      <button onclick="resetTimer()">Reset</button>
+      <button style="margin-left: 30%; font-family: 'emizen', sans-serif; font-size: 50px; text-align: center;"onclick="startTimer()">Start</button>
+      <button style="font-family: 'emizen', sans-serif; font-size: 50px; text-align: center;"onclick="stopTimer()">Stop</button>
+      <button style="font-family: 'emizen', sans-serif; font-size: 50px; text-align: center;"onclick="resetTimer()">Reset</button>
     </div>
     <div class="Bottom"></div>
   </div>
@@ -37,7 +37,7 @@
   
     function startTimer() {
       startTime = Date.now() - elapsedTime;
-      timerInterval = setInterval(updateTimer, 1); // Update every millisecond
+      timerInterval = setInterval(updateTimer, 1);
     }
   
     function stopTimer() {
